# formal-docs

./: README.md
cmake-project-layout/: .clang-format  .gitignore  CMakeLists.txt
cmake-project-layout/cmd/: CMakeLists.txt  play.cpp
cmake-project-layout/lib/: CMakeLists.txt
cmake-project-layout/lib/aut/: CMakeLists.txt
cmake-project-layout/lib/aut/src/: automaton.cpp  automaton.hpp
cmake-project-layout/lib/aut/test/: CMakeLists.txt  test.cpp
format/: aut.dimple  aut.dot  dimple.md  graphviz.md
